changed playback and activation logic. project playback happens in stages
Mon Jan 20 11:18:02 2003  Tim Janik  <timj@gtk.org>

	* bseproject.[hcp]: changed playback and activation logic.
	project playback happens in stages activate, start_playback,
	stop_playback and deactivate. a project can be automatically
	stopped due to the sequencer reaching song ends, and a project
	can be automatically deactivated through a timeout.
	export the new interface in procedures.

	* bseglobals.[hc] (bse_idle_timed): added timeout functions.

Thu Jan 16 23:27:51 2003  Tim Janik  <timj@gtk.org>

	* bseproject.[hcp]*:

	* bsemain.c (bse_main_loop): start sequencer thread.

	* bsemididevice.[hc]: removed cruft.

	* bsemidireceiver.[hc]: added accessor to check whether some
	voices are still active.

	* bsepart.[hc]: keep track of the last tick and export it as
	property. more _SL fixes for functions/memebers protected by
	the sequencer lock.

	* bsemidisynth.c: set early context creation flag.

	* bsesnet.c: maintain user context creation setting.

	* bsesong.[hc]: integrate with sequencer updates.
	(bse_song_init): set early context creation and sequencing flags.

	* bsessequencer.[hc]: start switching sequencer code over from
	songs to supers. detect song playback ends.

	* bsesuper.[hc]: introduce flags to indicate need of early or
	sequencer context creation and need for sequencing. could remove
	auto_activate field after introduction of the flags.

	* bsetrack.c: cause the sequencer to re-check whether a track is
	done after properties were altered.

	* bsewaverepo.c: nuke auto_activate setting.

	* bseserver.[hc]: simplify device management by exporting just
	bse_server_open_devices() and bse_server_close_devices() and
	suport use counting for them.

	* bseserver.proc: scratch run/halt-project procedures since
	projects export the necessary mechanisms themselves now.

svn path=/trunk/; revision=848

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -262,7 +262,7 @@ $(srcdir)/bseplugin.c: bsebuiltin_externs.c bsebuiltin_array.c
 $(srcdir)/bsetype.c: bsegentypes.c bsegentype_array.c
 
 #
-# setup BSE sources and their dependancies
+# setup sources, their dependancies and commands
 #
 bse_h_sources = $(bse_private_h_sources) $(bse_public_h_sources) $(bse_built_h_sources)
 libbseinclude_HEADERS = $(bse_public_h_sources) $(bse_built_h_sources)
@@ -273,13 +273,18 @@ EXTRA_DIST += $(bse_private_h_sources) $(bse_proc_sources)
 EXTRA_DIST += $(bse_built_c_sources) $(bse_built_h_sources) $(bse_extra_sources)
 GLIB_MKENUMS = glib-mkenums
 SFIDL = ../sfi/sfidl	# FIXME: cd $(srcdir) && $(SFIDL) doesn't work for builddir
+PPROCESS = $(CPP) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)  # analogous to $COMPILE
+# don't $(strip) the next two commands
+GREP_DEBUG_KEYS = sed -n '/sfi_debug_with_key[ 	]*("[^")]\+")/{ s/.*sfi_debug_with_key[  ]*(\("[^")]\+"\)).*/\1,/; p; }' | sort | uniq
+GREP_INFO_KEYS  = sed -n '/sfi_info_with_key[ 	]*("[^")]\+")/{ s/.*sfi_info_with_key[  ]*(\("[^")]\+"\)).*/\1,/; p; }' | sort | uniq
+
 
 #
 # rules to generate built sources
 #
 # setup autogeneration dependancies
-gen_sources = xgen-sbgth xgen-bgtc xgen-bgtac xgen-sbeac xgen-belc xgen-bbec xgen-bbac xgen-bnac xgen-bmx xgen-bmh xgen-bmc \
-  xgen-bgasi
+gen_sources = xgen-sbgth xgen-bgtc xgen-bgtac xgen-sbeac xgen-belc xgen-bbec xgen-bbac \
+	      xgen-bnac xgen-bmx xgen-bmh xgen-bmc xgen-bgasi xgen-dbk.c
 CLEANFILES += $(gen_sources) @MISSING_PERL5@ $(bse_proc_gen_sources)
 $(OBJECTS): $(bse_built_h_sources)
 # piggyback generation through sideeffects, needs NOP-rule for dep-tracking, must be in srcdir
@@ -299,15 +304,25 @@ stamp-bsegentypes.h: @MISSING_PERL5@ $(bse_public_h_sources) bserecords.sfidl $(
 	&& (cmp -s xgen-sbgth bsegentypes.h || cp xgen-sbgth bsegentypes.h) \
 	&& rm -f xgen-sbgth \
 	&& echo timestamp > $(@F)
-bsegentypes.c: @MISSING_PERL5@ bsegentypes.h mktypes.pl bserecords.sfidl $(SFIDL)
-	cd $(srcdir) \
+bsegentypes.c: @MISSING_PERL5@ bsegentypes.h mktypes.pl bserecords.sfidl $(SFIDL) $(bse_builtin_c_sources) # $(bse_c_sources)
+	cat $(bse_builtin_c_sources)	 > $(srcdir)/xgen-dbk.c \
+	&& cd $(srcdir) \
 	&& $(GLIB_MKENUMS) \
 	  --eprod "\nGType BSE_TYPE_ID (@EnumName@) = 0;" \
-	    $(bse_public_h_sources) > xgen-bgtc \
+	    $(bse_public_h_sources) >> xgen-bgtc \
 	&& $(PERL) mktypes.pl --interns --export-proto $(bse_c_sources) >> xgen-bgtc \
+	&& cat $(bse_c_sources)		>> xgen-dbk.c \
+	&& echo "static const gchar **bse_gen_debug_keys[] = {" >> xgen-bgtc \
+	&& $(PPROCESS) 2>/dev/null -DSFI_LOG_PROTECT_KEY_VARIANTS xgen-dbk.c \
+	| $(GREP_DEBUG_KEYS) >> xgen-bgtc \
+	&& echo "  NULL };" >> xgen-bgtc \
+	&& echo "static const gchar **bse_gen_info_keys[] = {" >> xgen-bgtc \
+	&& $(PPROCESS) 2>/dev/null -DSFI_LOG_PROTECT_KEY_VARIANTS xgen-dbk.c \
+	| $(GREP_INFO_KEYS) >> xgen-bgtc \
+	&& echo "  NULL };" >> xgen-bgtc \
 	&& $(SFIDL) --source --implementation --boxed --init _sfidl_types_init bserecords.sfidl >> xgen-bgtc \
 	&& cp xgen-bgtc $(@F) \
-	&& rm -f xgen-bgtc
+	&& rm -f xgen-bgtc xgen-dbk.c
 bsegentype_array.c: @MISSING_PERL5@ bsegentypes.c
 	cd $(srcdir) \
 	&& $(PERL) mktypes.pl --array $(bse_c_sources) > xgen-bgtac \
@@ -344,6 +359,7 @@ bsebuiltin_array.c: @MISSING_PERL5@ $(bse_builtin_c_sources) mkbuiltinlist.pl
 	&& rm -f xgen-bbac
 %.gen-proc.c: %.proc mkcproc.pl
 	$(srcdir)/mkcproc.pl $< >$@
+
 
 #
 # this file describes the BSE public API and needs to be generated at the
