support ETCHED_IN/OUT and _IN/OUT line (shadow) drawing types.
Mon Jan 20 11:13:14 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/gxk/gxkpolygon.c: support ETCHED_IN/OUT and _IN/OUT
        line (shadow) drawing types.

        * beast-gtk/bstapp.[hc]: use BstProjectCtrl.

        * beast-gtk/bstprojectctrl.[hc]: added controlling code, support stop
        and play.

        * beast-gtk/bstappcontrol.[hc]: moved contents to bstprojectctrl.[hc].

        * beast-gtk/gxk/gxkutils.[hc]:
        added convenience function gxk_size_group().

Sun Jan 19 04:26:45 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/images/bse-mime.png: added mockup of beast-mime.png,
        which actually says "BSE" for the file type.

svn path=/trunk/; revision=849

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -40,7 +40,7 @@ progs_LDADD = $(strip \
 beast_headers = $(strip \
 	bstcanvassource.h	bstapp.h	bstasciipixbuf.h	bstcanvaslink.h	\
 	bstsampleeditor.h	bstsequence.h	bstservermonitor.h	bstsnetshell.h	\
-	bstappcontrol.h		bstcluehunter.h				bstdial.h	\
+				bstcluehunter.h	bstprojectctrl.h	bstdial.h	\
 	bstfreeradiobutton.h	bstdragutils.h	bstfiledialog.h		bstgconfig.h	\
 	bstlogadjustment.h	bstitemview.h	bstknob.h \
 	bstparamview.h		bstmenus.h	bstparam.h		bstpartdialog.h	\
@@ -57,7 +57,7 @@ beast_headers = $(strip \
 beast_sources = $(strip \
 	bstcanvassource.c	bstapp.c	bstasciipixbuf.c	bstcanvaslink.c	\
 	bstsampleeditor.c	bstsequence.c	bstservermonitor.c	bstsnetshell.c	\
-	bstappcontrol.c		bstcluehunter.c				bstdial.c	\
+				bstcluehunter.c	bstprojectctrl.c	bstdial.c	\
 	bstfreeradiobutton.c	bstdragutils.c	bstfiledialog.c		bstgconfig.c	\
 	bstlogadjustment.c	bstitemview.c	bstknob.c \
 	bstparamview.c		bstmenus.c	bstparam.c		bstpartdialog.c	\
