--- a/beast-gtk/gxk/Makefile.am
+++ b/beast-gtk/gxk/Makefile.am
@@ -16,14 +16,15 @@ DEFS += $(strip \
 noinst_LIBRARIES = libgxk.a
 
 gxk_headers = $(strip \
-	gxkled.h	gxkcanvas.h	gxkdialog.h	gxkglobals.h \
-	gxkstatusbar.h	gxkstock.h	gxktexttools.h	gxktoolbar.h \
-	gxkutils.h	gxkpolygon.h	gxk.h \
+	gxkled.h	gxkcanvas.h	gxkdialog.h	gxkglobals.h     \
+	gxkstatusbar.h	gxkstock.h	gxktexttools.h	gxklistwrapper.h \
+	gxktoolbar.h	gxkutils.h	gxkpolygon.h	\
+	gxk.h \
 )
 gxk_c_sources = $(strip \
-	gxkled.c	gxkcanvas.c	gxkdialog.c	gxkglobals.c \
-	gxkstatusbar.c	gxkstock.c	gxktexttools.c	gxktoolbar.c \
-	gxkutils.c	gxkpolygon.c \
+	gxkled.c	gxkcanvas.c	gxkdialog.c	gxkglobals.c     \
+	gxkstatusbar.c	gxkstock.c	gxktexttools.c	gxklistwrapper.c \
+	gxktoolbar.c	gxkutils.c	gxkpolygon.c	\
 )
 gxk_extra_sources = $(strip \
 	gxkmarshal.list \
