s/BEAST Release Notice/BEAST Release Notes/.
Thu Jan 23 09:36:14 2003  Tim Janik  <timj@gtk.org>

        * docs/beast-index.texi: s/BEAST Release Notice/BEAST Release Notes/.

        * docs/release-notes.texi: keep the title centered.

        * docs/generated/Makefile.am: use $GROFF and $SOELIM instead of
        plain program names. fixed am-conditional HAVE_DOC_TOOLS.

        * configure.in: don't try to detect whether this is a CVS build.
        instead, require the caller to supply --enable-devel-rules=yes if
        extra development rules should be enabled.
        added checks for doc generation tools groff and soelim.
        supply an am-conditional HAVE_DOC_TOOLS based on availability of
        the doc tools.

        * autogen.sh: supply --enable-devel-rules=yes to ./configure.

Thu Jan 23 01:40:09 2003  Alper Ersoy <dirt@gtk.org>

        * docs/teximacros.texi: added an artificial linebreak at the end of
        the revision line to avoid a bug with makeinfo that would lead to
        misfilled paragraphs in info targets.

        * docs/generated/scandocs.pl: adjusted linebreaks around revision
        lines.

        * docs/WRITING.3.texi: completely restructured, added examples for
        @xref command.

        * docs/WRITING.3.texi:
        * docs/quickstart.texi: added @node and @menu commands to make these
        documents generate more usable info files.

        * docs/site-navigation.xml:
        * docs/generated/navigation.xsl: renamed all <node> tags to
        <navigation-node> to avoid mixing with tags generated via
        @node commands.

        * docs/generated/html.xsl:
        * docs/generated/man.xsl:
        * docs/generated/markup.xsl: added support for @r, @b, @i, @t, @node,
        @menu and @xref commands. document font is explicitly set to serif
        even if it is not defined in the document. changed the way titles are
        counted and numbered so that they are not affected by the change in
        the XML struct

--- a/configure.in
+++ b/configure.in
@@ -82,7 +82,9 @@ AC_PROG_MAKE_SET
 AC_CANONICAL_HOST
 
 # declare --enable-* args and collect ac_help strings
-AC_ARG_ENABLE(debug, [  --enable-debug=[no/minimum/yes] turn on debugging [default=$debug_default]],,enable_debug=$debug_default)
+AC_ARG_ENABLE(debug,       [  --enable-debug=[no/minimum/yes] turn on debugging [default=$debug_default]],,enable_debug=$debug_default)
+AC_ARG_ENABLE(devel-rules, [  --enable-devel-rules=[no/yes]   turn on developer build rules],,)
+# $enable_devel_rules
 
 dnl setup DEBUG defaults
 if test "x$enable_debug" = "xyes"; then
@@ -101,13 +103,6 @@ fi
 dnl Foreign defaults:
 MC_IF_VAR_EQ(enable_static, yes, , enable_static=no)
 MC_IF_VAR_EQ(enable_shared, no, , enable_shared=yes)
-
-dnl basic environment
-if test -d CVS -a -x autogen.sh ; then
-    DEVEL_BUILD_TEST="-n CVS"
-else
-    DEVEL_BUILD_TEST="-z CVS"
-fi
 
 
 dnl
@@ -366,9 +361,12 @@ AC_DEFUN(AC_DOC_REQUIREMENTS,
     )
     AC_SUBST(XMLMAKEINFO)
     AC_CHECK_PROGS(XSLTPROC,xsltproc,)
-    AM_CONDITIONAL(HAVE_XMLMAKEINFO_AND_XSLTPROC, test -n "$XSLTPROC" && test -n "$XMLMAKEINFO")
-    if test $DEVEL_BUILD_TEST -a -z "$HAVE_XMLMAKEINFO_AND_XSLTPROC_FALSE" ; then
-	AC_MSG_ERROR("required program makeinfo or xsltproc is missing")
+    AC_CHECK_PROGS(GROFF,groff,)
+    AC_CHECK_PROGS(SOELIM,soelim,)
+    AM_CONDITIONAL(HAVE_DOC_TOOLS, test -n "$XSLTPROC" -a -n "$XMLMAKEINFO" -a \
+                                        -n "$GROFF" -a -n "$SOELIM")
+    if test "x$enable_devel_rules" = "xyes" -a -z "$HAVE_DOC_TOOLS_FALSE" ; then
+	AC_MSG_ERROR([one of the devel tools (makeinfo, xsltproc, groff, soelim) is missing])
     fi
 ])
 
