keep current radio tool if users click on an already depressed toggle
Sun Feb  9 18:33:11 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstradiotools.c (rtools_toggle_toggled): keep current radio
        tool if users click on an already depressed toggle button.

        * beast-gtk/bsttrackrollctrl.c: support firing up part editor and
        part deletion (from a track).

        * beast-gtk/bsttrackview.c: more GUI work, added toolbar for part
        operations.

        * beast-gtk/bstpianoroll.c (bst_piano_roll_realize): force cursor
        updates in ::realize.

        * beast-gtk/bstitemview.[hc]: unconditionally create the tools
        container, the widget holding action buttons (renamed from op_box).
        support tooltips on action buttons.
        allow derived classes to pack the tool box away.

        * beast-gtk/icons/text.xcf:
        * beast-gtk/icons/text.png:
        * beast-gtk/icons/Makefile.am: added BST_STOCK_TEXT icon.

        * beast-gtk/bstradiotools.[hc]: made BstRadioTools derive from
        GObject (instead of GtkObject).

        * beast-gtk/bstsnetrouter.c (bst_snet_router_init):
        * beast-gtk/bstpartdialog.c (bst_part_dialog_init): adapted
        callers.

svn path=/trunk/; revision=875

--- a/beast-gtk/icons/Makefile.am
+++ b/beast-gtk/icons/Makefile.am
@@ -21,6 +21,7 @@ SRC_IMAGES = @STRIP_BEGIN@	\
 	railway.xcf		\
 	rect-select.xcf		\
 	target.xcf		\
+	text.xcf		\
 	trash-scissors.xcf	\
 	trashcan.xcf		\
 	vert-select.xcf		\
@@ -64,6 +65,7 @@ STOCK_IMAGE_DEFS = @STRIP_BEGIN@ \
 	STOCK_QNOTE_16			$(srcdir)/qnote-16.png		\
 	STOCK_RECT_SELECT		$(srcdir)/rect-select.png	\
 	STOCK_TARGET			$(srcdir)/target.png		\
+	STOCK_TEXT			$(srcdir)/text.png		\
 	STOCK_TRACK			$(srcdir)/railway.png		\
 	STOCK_TRASH_SCISSORS		$(srcdir)/trash-scissors.png	\
 	STOCK_TRASHCAN			$(srcdir)/trashcan.png		\
