--- a/configure.in
+++ b/configure.in
@@ -214,9 +214,12 @@ AC_DEFUN(AC_BSE_REQUIREMENTS,
     fi
     AC_SUBST(LIBZ)
 
+    PKG_CHECK_MODULES(CSL, csl >= 0.2.0, HAVE_LIBCSL=1, HAVE_LIBCSL=0)
+    AC_DEFINE_UNQUOTED(HAVE_LIBCSL, $HAVE_LIBCSL, [Define if you have libcsl (Common Sound Layer)])
+
     dnl We need SFI and GSL
-    BSE_CFLAGS="$GSL_CFLAGS $SFI_CFLAGS"
-    BSE_LIBS="$GSL_LIBS $SFI_LIBS $LIBZ"
+    BSE_CFLAGS="$GSL_CFLAGS $CSL_CFLAGS $SFI_CFLAGS"
+    BSE_LIBS="$GSL_LIBS $CSL_LIBS $SFI_LIBS $LIBZ"
     AC_SUBST(BSE_CFLAGS)
     AC_SUBST(BSE_LIBS)
 
