virtualize set_container().
Sat Feb 22 17:10:34 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstitemview.[hc]: virtualize set_container().

        * beast-gtk/bsttrackroll.[hc]: provide just ::drag and ::clicked signals
        for control widgets. support tick markers. added vpanel for miniscopes.
        polished overall layout.

        * beast-gtk/bsttrackrollctrl.[hc]: support track roll position pointers.
        adoptions to track roll changes.

        * beast-gtk/bsttrackview.[hc]: support song position and loop pointers
        and offer loop toggle button.

        * beast-gtk/gxk/gxkutils.[hc]: added convenience function gxk_color_alloc().
        fixed up gxk_tree_view_get_row_area() to return FALSE for empty trees.

        * beast-gtk/icons/Makefile.am:
        * beast-gtk/icons/loopleft.xcf:
        * beast-gtk/icons/loopleft.png:
        * beast-gtk/icons/loopright.png:
        * beast-gtk/icons/repeat.xcf:
        * beast-gtk/icons/repeat.png:
        * beast-gtk/icons/tickpointer.png: new tick loop/pointer/repeat icons.

svn path=/trunk/; revision=926

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -42,7 +42,7 @@ beast_headers = $(strip \
 	bstsampleeditor.h	bstsequence.h	bstservermonitor.h	bstsnetshell.h	\
 	bsttrackroll.h		bstcluehunter.h	bstprojectctrl.h	bstdial.h	\
 	bstfreeradiobutton.h	bstdragutils.h	bstfiledialog.h		bstgconfig.h	\
-	bstlogadjustment.h	bstitemview.h				bstknob.h	\
+	bstlogadjustment.h	bstitemview.h	bstmarker.h		bstknob.h	\
 	bstparamview.h		bstmenus.h	bstparam.h		bstpartdialog.h	\
 	bstpianorollctrl.h	bstpartview.h	bstpianoroll.h		bstplayback.h	\
 	bstprocbrowser.h	bstqsampler.h	bstpreferences.h	bstprocedure.h	\
@@ -59,7 +59,7 @@ beast_sources = $(strip \
 	bstsampleeditor.c	bstsequence.c	bstservermonitor.c	bstsnetshell.c	\
 	bsttrackroll.c		bstcluehunter.c	bstprojectctrl.c	bstdial.c	\
 	bstfreeradiobutton.c	bstdragutils.c	bstfiledialog.c		bstgconfig.c	\
-	bstlogadjustment.c	bstitemview.c				bstknob.c	\
+	bstlogadjustment.c	bstitemview.c	bstmarker.c		bstknob.c	\
 	bstparamview.c		bstmenus.c	bstparam.c		bstpartdialog.c	\
 	bstpianorollctrl.c	bstpartview.c	bstpianoroll.c		bstplayback.c	\
 	bstprocbrowser.c	bstqsampler.c	bstpreferences.c	bstprocedure.c	\
