removed tool selections, BstTrackRollCtrl takes care of that now. setup
Wed Mar  5 01:51:40 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bsttrackview.[hc]: removed tool selections,
        BstTrackRollCtrl takes care of that now. setup radio tool
        accelerators.

        * beast-gtk/gxk/gxkutils.[hc]: added gxk_widget_activate_accel_group()
        to support per widget accelerator groups.

        * beast-gtk/bstradiotools.[hc]: code cleanups. added accel group
        and tool accelerators support. support BstCatalog tools.

        * beast-gtk/bsttrackrollctrl.[hc]: moved tool selections here,
        the track roll controler now creates his own radio tools, make
        use of catalog tool definitions. removed code that became useless.

        * beast-gtk/bstdefs.h: added dummy macros to allow for catalog
        key and i18n string markup.

        * beast-gtk/bstmain.c: added i18n markup.

        * beast-gtk/bstcatalog.[hc]: started on a catalog mechanism
        to lookup messages and other translatable things which aren't
        good to be handled by gettext.

        * beast-gtk/catalog-en.c: english catalog holding tool
        definitions (name, icon, tooltip, etc.) for ctalog keys.

        * beast-gtk/scankeys.c: small tool to grep for specific key
        macros in C sources.

        * beast-gtk/Makefile.am: add a rule that verifies there're
        are no undefined catalog keys being used in the program.

svn path=/trunk/; revision=937

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -51,7 +51,7 @@ beast_headers = $(strip \
 	bstusermessage.h	bstutils.h	bstwavedialog.h		bstwaveeditor.h	\
 	bstwavereposhell.h	bstwaveview.h	bstsongshell.h		bstxkb.h	\
 	bstzoomedwindow.h	glewidgets.h	bsttrackrollctrl.h	bstxframe.h	\
-	bstdefs.h bstmarshal.h \
+	bstcatalog.h		bstdefs.h bstmarshal.h \
 )
 # BEAST c sources to build the program from
 beast_sources = $(strip \
@@ -68,13 +68,16 @@ beast_sources = $(strip \
 	bstusermessage.c	bstutils.c	bstwavedialog.c		bstwaveeditor.c	\
 	bstwavereposhell.c	bstwaveview.c	bstsongshell.c		bstxkb.c	\
 	bstzoomedwindow.c	glewidgets.c	bsttrackrollctrl.c	bstxframe.c	\
-	$(PROFILE_SOURCE) \
+	bstcatalog.c		$(PROFILE_SOURCE) \
 )
 # BEAST sources that get included (don't have own .lo rules)
 beast_extra_sources = $(strip \
-	bstparam-label.c	bstmarshal.c	bstparam-toggle.c	bstparam-spinner.c \
-	bstrackeditor-covers.c	bstmarshal.list	bstparam-choice.c	bstparam-note-sequence.c \
-	bstenum_arrays.stamp	bstparam-scale.c			bstparam-entry.c \
+	bstparam-label.c	bstmarshal.c	 bstparam-toggle.c	bstparam-spinner.c \
+	bstrackeditor-covers.c	bstparam-scale.c bstparam-choice.c	bstparam-note-sequence.c \
+	bstparam-entry.c \
+)
+beast_extra_files = $(strip \
+	catalog-en.c	bstmarshal.list		bstenum_arrays.stamp	\
 )
 # BEAST built sources that don't get installed
 beast_built_sources = @STRIP_BEGIN@ \
@@ -142,22 +145,35 @@ $(srcdir)/bstmarshal.c: bstmarshal.list
 	&& cp xgen-bmc bstmarshal.c \
 	&& rm -f xgen-bmc
 
+SCANKEYS=$(top_builddir)/beast-gtk/scankeys
+bstutils.o bstutils.lo: scankeys $(beast_sources) $(beast_extra_sources)
+	cd $(srcdir) \
+	&& $(SCANKEYS) --key CKEY --skipkeys catalog-en.c \
+	     --tmplstart '#error MISSING DOC KEYS:\n' \
+	     --tmplkey '  { CKEY (%s),\t\t"Name",\n  BST_STOCK_,\t\t\t\t"",\n    "tip", NULL,\n  },\n' \
+	     --needkeys $(beast_sources) $(beast_extra_sources)
+
 #
 # setup BEAST sources and their dependancies
 #
 bin_PROGRAMS = beast
 beast_SOURCES = bstmain.c $(beast_sources)
 beast_LDADD = $(progs_LDADD)
-noinst_PROGRAMS = bststest tsmview
+noinst_PROGRAMS = bststest tsmview scankeys
 bststest_SOURCES = bststest.c bstutils.c bstqsampler.c
 bststest_LDADD = $(progs_LDADD)
 tsmview_SOURCES = tsmview.c
 tsmview_LDADD = $(progs_LDADD)
 
+# scankeys
+scankeys_SOURCES = scankeys.c
+scankeys_LDADD = $(progs_LDADD)
+
+
 # extra deps
 $(beast_SOURCES) $(bststest_SOURCES) $(tsmview_SOURCES): bstgentypes.h
 
-EXTRA_DIST += $(beast_headers) $(beast_extra_sources)
+EXTRA_DIST += $(beast_headers) $(beast_extra_sources) $(beast_extra_files)
 MAINTAINERCLEANFILES += $(beast_built_sources)
 EXTRA_DIST += $(beast_built_sources)
 
