document part-link tool.
Wed Mar  5 23:19:28 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/catalog-en.c (tools_en): document part-link tool.

        * beast-gtk/bsttrackrollctrl.c (controller_update_canvas_cursor):
        support linking of parts.

        * beast-gtk/icons/part-copy.xcf:
        * beast-gtk/icons/part-copy.c: part copying/linking image.

        * beast-gtk/Makefile.am (beast_DEPENDENCIES): fix key scanning
        build rule.

        * docs/modifiers.txt: new file, holding comments about modifiers
        affecting selections and dnd.

svn path=/trunk/; revision=939

--- a/beast-gtk/icons/Makefile.am
+++ b/beast-gtk/icons/Makefile.am
@@ -16,6 +16,7 @@ SRC_IMAGES = @STRIP_BEGIN@	\
 	notes.xcf		\
 	palette.xcf		\
 	part-tool.xcf		\
+	part-copy.xcf		\
 	pattern-group.xcf	\
 	pattern-tool.xcf	\
 	pattern.xcf		\
@@ -52,6 +53,7 @@ STOCK_IMAGE_DEFS = @STRIP_BEGIN@ \
 	STOCK_NOTE_16			$(srcdir)/note-16.png		\
 	STOCK_PALETTE			$(srcdir)/palette.png		\
 	STOCK_PART			$(srcdir)/part.png		\
+	STOCK_PART_COPY			$(srcdir)/part-copy.png		\
 	STOCK_PART_EDITOR		$(srcdir)/part-editor.png	\
 	STOCK_PART_TOOL			$(srcdir)/part-tool.png		\
 	STOCK_PATTERN			$(srcdir)/pattern.png		\
