removed SEQID column, since the SeqId is pretty useless for tracks. added
Thu Mar  6 06:09:18 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bsttrackview.c: removed SEQID column, since the SeqId
        is pretty useless for tracks. added Synth column to allow the user
        to choose the SNet for a track. skip per-track property editing
        elements. implemented upath matching algorithm for synth lookups.
        however, we still need a convenient popup window to let the
        user graphically select synths (or waves).

        * beast-gtk/gxk/gxkutils.c: added function to create popup
        cell renderer columns.

        * beast-gtk/gxk/gxkcellrendererpopup.[hc]: new file implementing
        a GtkCellRendererText derived cell renderer: GxkCellRendererPopup,
        and a GtkEventBox derived GtkCellEditable interface proxy:
        GxkProxyEditable. the latter is needed to have multiple widgets
        make up an editable cell. the actual popup window doesn't yet
        work, though the rest of the code seems to be in sufficient
        shape now.

svn path=/trunk/; revision=941

--- a/beast-gtk/gxk/Makefile.am
+++ b/beast-gtk/gxk/Makefile.am
@@ -18,13 +18,13 @@ noinst_LIBRARIES = libgxk.a
 gxk_headers = $(strip \
 	gxkled.h	gxkcanvas.h	gxkdialog.h	gxkglobals.h     \
 	gxkstatusbar.h	gxkstock.h	gxktexttools.h	gxklistwrapper.h \
-	gxktoolbar.h	gxkutils.h	gxkpolygon.h	\
+	gxktoolbar.h	gxkutils.h	gxkpolygon.h	gxkcellrendererpopup.h \
 	gxk.h \
 )
 gxk_c_sources = $(strip \
 	gxkled.c	gxkcanvas.c	gxkdialog.c	gxkglobals.c     \
 	gxkstatusbar.c	gxkstock.c	gxktexttools.c	gxklistwrapper.c \
-	gxktoolbar.c	gxkutils.c	gxkpolygon.c	\
+	gxktoolbar.c	gxkutils.c	gxkpolygon.c	gxkcellrendererpopup.c \
 )
 gxk_extra_sources = $(strip \
 	gxkmarshal.list \
