scan debugging keys and dump them to bstdebugkeys.defs.
Fri Mar  7 14:53:17 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/Makefile.am: scan debugging keys and dump
        them to bstdebugkeys.defs.

        * bstmain.c: debugging options revamp.

svn path=/trunk/; revision=951

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -78,6 +78,7 @@ beast_extra_sources = $(strip \
 )
 beast_extra_files = $(strip \
 	catalog-en.c	bstmarshal.list		bstenum_arrays.stamp	stamp-ckeycheck \
+	bstdebugkeys.defs \
 )
 # BEAST built sources that don't get installed
 beast_built_sources = @STRIP_BEGIN@ \
@@ -148,13 +149,25 @@ $(srcdir)/bstmarshal.c: bstmarshal.list
 SCANKEYS=$(top_builddir)/beast-gtk/scankeys
 stamp-ckeycheck: scankeys $(beast_sources) $(beast_extra_sources)
 	cd $(srcdir) \
-	&& $(SCANKEYS) --key CKEY --skipkeys catalog-en.c \
+	&& $(SCANKEYS) --count --key CKEY --skipkeys catalog-en.c \
 	     --tmplstart '#error MISSING DOC KEYS:\n' \
 	     --tmplkey '  { CKEY (%s),\t\t"Name",\n  BST_STOCK_,\t\t\t\t"",\n    "tip", NULL,\n  },\n' \
 	     --needkeys $(beast_sources) $(beast_extra_sources)
 	touch $@
-
 beast_DEPENDENCIES += stamp-ckeycheck
+
+debug_key_globs = $(top_srcdir)/beast-gtk/*.[hc] $(top_srcdir)/bse/*.[hc] $(top_srcdir)/sfi/*.[hc]
+bstdebugkeys.defs: scankeys $(debug_key_globs)
+	cd $(srcdir) \
+	&& echo > xgen-bdkd \
+	&& grep -E 'sfi_debug_(keyfunc|test_key)' $(debug_key_globs) \
+	| $(SCANKEYS) --key sfi_debug_keyfunc --key sfi_debug_test_key \
+	     --tmplstart '#define BST_LOG_SCAN_KEYS \\\n' \
+	     --tmplkey   '  %s, \\\n' \
+	     --tmplend   '\n' 	--needkeys - >> xgen-bdkd \
+	&& cp xgen-bdkd $@ \
+	&& rm -f xgen-bdkd
+bstutils.c: bstdebugkeys.defs
 
 #
 # setup BEAST sources and their dependancies
