got rid of a good chunk of fixmes. prioritized stw/timj items.
Sun Mar  9 15:44:48 2003  Tim Janik  <timj@gtk.org>

        * TODO: got rid of a good chunk of fixmes.
        prioritized stw/timj items.

        * beast-gtk/bstcanvassource.c (bst_canvas_icon_set): catch empty
        icons.

        * configure.in: removed CSL related checks.

        * beast-gtk/bstrecords.sfidl: remove ALSA preference option.

        * beast-gtk/bstdefs.h: cleaned up developer extensions and
        related macros.

        * beast-gtk/bstmain.c: fix up '-:' developer option.

        * acbeast.m4: change gcc optimization from -O3 to -O2 since -O3
        may produce buggy code at times.

svn path=/trunk/; revision=959

--- a/configure.in
+++ b/configure.in
@@ -214,12 +214,9 @@ AC_DEFUN(AC_BSE_REQUIREMENTS,
     fi
     AC_SUBST(LIBZ)
 
-    PKG_CHECK_MODULES(CSL, csl >= 0.2.0, HAVE_LIBCSL=1, HAVE_LIBCSL=0)
-    AC_DEFINE_UNQUOTED(BSE_PCM_DEVICE_CSL_SUPPORT, $HAVE_LIBCSL, [Define if you have libcsl (Common Sound Layer)])
-
     dnl We need SFI and GSL
-    BSE_CFLAGS="$GSL_CFLAGS $SFI_CFLAGS $CSL_CFLAGS"
-    BSE_LIBS="$GSL_LIBS $SFI_LIBS $LIBZ $CSL_LIBS"
+    BSE_CFLAGS="$GSL_CFLAGS $SFI_CFLAGS"
+    BSE_LIBS="$GSL_LIBS $SFI_LIBS $LIBZ"
     AC_SUBST(BSE_CFLAGS)
     AC_SUBST(BSE_LIBS)
 
